Bug 238107 - Request Disposition Notification option not implemented
Summary: Request Disposition Notification option not implemented
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-05-19 00:48 UTC by Sabine Faure
Modified: 2010-07-04 22:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-19 00:48:27 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'New'
- Go to Options menu/Request Disposition Notification
- Fill in the recipient (your Imap test address), subject and enter a few words in the text editor
- Click on 'Send'
- The recipient receives the email
- In the recipient's inbox, select the received email
- Click on 'v' 
- The following line can be found in the plain text file: Disposition-Notification-To: Name Surname <email address> 

Apart from that the email does not look any different than the other ones and no email is sent back to warn the sender that the recipient has opened the email.

Trunk, Svn Rev 1128166
Comment 1 Thomas McGuire 2010-05-20 18:35:50 UTC
> Apart from that the email does not look any different than the other ones

I think that is ok, it seems that the Disposition-Notification-To is the only header field that needs to be added.


So the bug here is that KMail will not send out responses to MDN requests.
Comment 2 András Manţia 2010-05-21 13:53:02 UTC
I verified and found the following:
1) MDN creation in the composer works.
2) MDN dialog is shown in the viewer IF "Mark selected messages as read after XX sec" is enabled in Settings-Misc-Folders. This is behavior wise the same as in KMail 1.
3) In the response for some reason the From: header is not set. This is a bug.
Comment 3 Leo Franchi 2010-05-31 23:03:41 UTC
SVN commit 1132998 by lfranchi:

Finish fixing MDN options. Should behave correctly in all cases now.

BUG: 238107


 M  +2 -0      kmail/mdnadvicedialog.cpp  
 M  +1 -1      messagecomposer/messagefactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132998
Comment 4 Sabine Faure 2010-06-23 23:34:36 UTC
I retested this today and I still get the same behaviour as described above ('Disposition-Notification-To: Name Surname <email address>' in the plain text file of the recipient's email and no email sent back to the sender to inform him that the email has been read)

Am I testing this correctly or should I use different steps to test this functionality correctly?

Trunk, Svn Rev 1141839
Comment 5 Leo Franchi 2010-06-24 22:27:49 UTC
hmm, I still can't reproduce. I just successfully sent an MDN and then a MDn receipt. What setting do you have in Configure->Security->Send Policy?

the options are Ignore / Ask / Deny / Always Send

you should have Ask or Always Send. if Ignore is selected, that is why it is not being sent.
Comment 6 Sabine Faure 2010-07-04 22:02:21 UTC
Thx for the tip Leo ;o)

I had 'Ignore' set as default in the security section of the configure dialogue.
Once I set 'Ask' it worked fine:

The sender receives an automatic email called 'Message Disposition Notification' from the recipient with the following message:'the message sent on 04/07/2010 21:53 to EmailOfTherecipient with subject "New email 4" has been displayed. This is no guarantee that the message has been read or understood.

Trunk, Svn Rev 1145265