Finish fixing MDN options. Should behave correctly in all cases now.

BUG: 238107

svn path=/trunk/KDE/kdepim/kmail/; revision=1132998